fix white space under main teaser image on homepage

--- a/src/components/teaser/_teaser--hero-with-description.scss
+++ b/src/components/teaser/_teaser--hero-with-description.scss
@@ -7,6 +7,7 @@
     & img {
       width: 100%;
       min-height: 380px;
+      display: block;
     }
   }
   .cmp-teaser__content {
